# AGIoT

./: CMakeLists.txt  LICENSE  README.md  module.json
inc/: CAlgorithm.hpp  FlowSensor.hpp  flow_velocity.hpp
platform/artifacts/unit-tests/: flow_sensor.xml
platform/artifacts/unit-tests/coverage/: index._usr_include_c++_4.9_bits_alloc_traits.h.html  index._usr_include_c++_4.9_bits_allocator.h.html  index._usr_include_c++_4.9_bits_basic_ios.h.html  index._usr_include_c++_4.9_bits_basic_string.h.html  index._usr_include_c++_4.9_bits_basic_string.tcc.html  index._usr_include_c++_4.9_bits_char_traits.h.html  index._usr_include_c++_4.9_bits_ios_base.h.html  index._usr_include_c++_4.9_bits_locale_facets.h.html  index._usr_include_c++_4.9_bits_move.h.html  index._usr_include_c++_4.9_bits_stl_algobase.h.html  index._usr_include_c++_4.9_bits_stl_construct.h.html  index._usr_include_c++_4.9_bits_stl_iterator.h.html  index._usr_include_c++_4.9_bits_stl_iterator_base_funcs.h.html  index._usr_include_c++_4.9_bits_stl_iterator_base_types.h.html  index._usr_include_c++_4.9_bits_stl_uninitialized.h.html  index._usr_include_c++_4.9_bits_stl_vector.h.html  index._usr_include_c++_4.9_bits_vector.tcc.html  index._usr_include_c++_4.9_ext_alloc_traits.h.html  index._usr_include_c++_4.9_ext_atomicity.h.html  index._usr_include_c++_4.9_ext_new_allocator.h.html  index._usr_include_c++_4.9_ext_type_traits.h.html  index._usr_include_c++_4.9_iostream.html  index._usr_include_c++_4.9_sstream.html  index._usr_include_x86_64-linux-gnu_c++_4.9_bits_gthr-default.h.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_build_install_x86_64_include_DataHndlr.hpp.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_build_install_x86_64_include_JSerializer.hpp.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_build_install_x86_64_include_WorkerThread.hpp.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_deps_plog_include_plog_Init.h.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_deps_plog_include_plog_Logger.h.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_deps_plog_include_plog_Record.h.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_deps_plog_include_plog_Util.h.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_test_gtest_include_gtest_gtest-message.h.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_test_gtest_include_gtest_gtest.h.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_test_gtest_include_gtest_internal_gtest-internal.h.html  index._workspace_hbm-vscode-remote_deps_hermes-base-cpp_test_gtest_include_gtest_internal_gtest-port.h.html  index._workspace_hbm-vscode-remote_inc_CAlgorithm.hpp.html  index._workspace_hbm-vscode-remote_src_FlowSensor.cpp.html  index._workspace_hbm-vscode-remote_src_flow_velocity.cpp.html  index._workspace_hbm-vscode-remote_tests_FlowSensorTest.cpp.html  index.html  (+1 more)
src/: FlowSensor.cpp  flow_velocity.cpp
tests/: CMakeLists.txt  FlowSensorTest.cpp
